pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: api
spec:
  containers:
    - name: api
      image: registry.cluster.wik.cloud/public/echo
      ports:
        - containerPort: 8080
