ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podtest
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: production.google.fr
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: podtest-service
                port:
                  number: 3000
